# JungleChess

./: CMakeLists.txt  README.md  jungle_chess  opening_book.txt
include/: AI.h  Book.h  Common.h  Evaluation.h  GameState.h  Graphics.h  Hashing.h
src/: AI.cpp  Book.cpp  GameState.cpp  Graphics.cpp  Hashing.cpp  main.cpp
